# formation_robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/leader_bot/lib/leader_bot/: convert_real_image_to_fisheye.py  make_image_to_panorama2.py  tf_publisher.py
install/leader_bot/local/lib/python3.10/dist-packages/leader_bot-0.0.1-py3.10.egg-info/: PKG-INFO  top_level.txt
install/leader_bot/share/ament_index/resource_index/package_run_dependencies/: leader_bot
install/leader_bot/share/leader_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/leader_bot/share/leader_bot/cmake/: leader_botConfig.cmake
install/leader_bot/share/leader_bot/launch/: multi_robot.launch.py  spawn_turtlebot3.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_house.launch.py
install/leader_bot/share/leader_bot/models/aruco_marker/: image.dae
install/leader_bot/share/leader_bot/rviz/: config_rviz.rviz
install/leader_bot/share/leader_bot/scripts/: convert_fisheye_to_image.py
install/leader_bot/share/leader_bot/urdf/: turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
install/turtlebot3/share/turtlebot3/: local_setup.sh  package.sh
install/turtlebot3_bringup/share/turtlebot3_bringup/: package.sh
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: package.sh
install/turtlebot3_description/share/turtlebot3_description/: local_setup.sh  package.sh
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_navigation2/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_navigation2
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: package.sh
install/turtlebot3_node/share/turtlebot3_node/: local_setup.sh  package.sh
install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh
log/: latest_build
src/leader_bot/: CMakeLists.txt
src/leader_bot/launch/: empty_world.launch.py  robot_state_publisher.launch.py  turtlebot3_autorace_2020.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_world.launch.py
src/leader_bot/scripts/: aruco.py  make_image_to_panorama.py  real_image.py
src/leader_bot/src/: cpp_node.cpp
src/leader_bot/urdf/: turtlebot3_burger.urdf
