<?xml version="1.0"?>
<package format="3">
  <name>leader_bot</name>
  <version>0.0.1</version>
  <description>Lab 1.1 Mobile Robot Kinematics</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclpy</build_depend>

  <!-- Export dependencies -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>ament_cmake_python</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "install/leader_bot/share"/>
  </export>

</package>
